Added summary to HTML-report. Added option for threshold where command-line --threshold=80 would result in return 1 if less than 80% of compiling mutations where killed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,4 @@ else()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -Wall -pedantic -Wextra")
 endif()
 
-add_executable(dumbmutate main.cpp SourceFile.cpp SourceFile.h MutatorBase.cpp MutatorBase.h MutatorCaret.cpp MutatorCaret.h MutatorEqual.cpp MutatorEqual.h MutatorAddSubtr.cpp MutatorAddSubtr.h HTMLExporter.cpp HTMLExporter.h MutatorNEqual.cpp MutatorNEqual.h MutatorIncrDecr.cpp MutatorIncrDecr.h MutatorNumShift.cpp MutatorNumShift.h MutatorAndOr.cpp MutatorAndOr.h MutatorTrueFalse.cpp MutatorTrueFalse.h)
+add_executable(dumbmutate main.cpp SourceFile.cpp SourceFile.h MutatorBase.cpp MutatorBase.h MutatorCaret.cpp MutatorCaret.h MutatorEqual.cpp MutatorEqual.h MutatorAddSubtr.cpp MutatorAddSubtr.h HTMLExporter.cpp HTMLExporter.h MutatorNEqual.cpp MutatorNEqual.h MutatorIncrDecr.cpp MutatorIncrDecr.h MutatorNumShift.cpp MutatorNumShift.h MutatorAndOr.cpp MutatorAndOr.h MutatorTrueFalse.cpp MutatorTrueFalse.h Utility.h Utility.cpp)
